--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "e2e:run-server": "node dist/web/server.js",
     "e2e:install": "npx playwright install --with-deps",
     "e2e:show-report": "npx playwright show-report tests/report",
-    "update-changelog": "./update-changelog.sh"
+    "update-changelog": "./update-changelog.sh",
+    "checkCommit": "./src/bindings/scripts/check-commit.sh"
   },
   "author": "O(1) Labs",
   "devDependencies": {
