--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
   workflow_dispatch: {}
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   Prepare:
     runs-on: ubuntu-latest
