--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -84,21 +84,10 @@ jobs:
           node-version: '18'
 
       - name: Check Mina submodule compatibility
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            src
-          key: sh scripts/check-mina-commit.sh compatible
+        run: sh scripts/check-mina-commit.sh compatible
 
       - name: Check Commit
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.npm
-            node_modules
-            dist
-          key: npm run checkCommit
+        run: npm run checkCommit
 
   Build-And-Test-Server:
     needs: Prepare
