--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -81,7 +81,16 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+
+      - name: Restore cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            node_modules
+            dist
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.ts', '**/*.js') }}
 
       - name: Check Mina submodule compatibility
         run: bash scripts/check-mina-commit.sh compatible
