--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -90,10 +90,11 @@ jobs:
             ~/.npm
             node_modules
             dist
+            src
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.ts', '**/*.js') }}
 
       - name: Check Mina submodule compatibility
-        run: bash scripts/check-mina-commit.sh compatible
+        run: sh scripts/check-mina-commit.sh compatible
 
       - name: Check Commit
         run: npm run checkCommit
