--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -86,8 +86,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: '0'
-
+          fetch-depth: 0
       - name: Configure Git
         run: |
           git config --local user.email "action@github.com"
