automatically tag version number after release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,3 +80,16 @@ jobs:
           gh pr create --base main --head $NEW_BRANCH --title "Release $NEW_VERSION [CHECK SEMVER BEFORE MERGE]" --body "This is an automated PR to update to version $NEW_VERSION. Please check [SemVer](https://semver.org/) for correct versioning before merging this PR."
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+
+      - name: Determine released version
+        id: version
+        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
+      
+      - name: Tag new version
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          RELEASED_VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          git tag $RELEASED_VERSION
+          git push origin $RELEASED_VERSION
+
