--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -301,6 +301,8 @@ jobs:
         run: |
           npm ci
           npm run prepublishOnly
+
+
       - name: Publish to NPM if version has changed
         uses: JS-DevTools/npm-publish@v3
         with:
@@ -308,6 +310,18 @@ jobs:
           strategy: upgrade
         env:
           INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
+      
+      - name: Determine released version
+        id: version
+        run: echo "::set-output name=version::$(node -p "require('./package.json').version")"
+      
+      - name: Tag new version
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          RELEASED_VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          git tag $RELEASED_VERSION
+          git push origin $RELEASED_VERSION
 
   Release-mina-signer-on-NPM:
     if: github.ref == 'refs/heads/main'
