--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -30,7 +30,7 @@ jobs:
           nix run o1js#update-bindings --max-jobs 4
           #fail if this changes any files
           cd src/bindings
-          git diff-index --exit-code HEAD || (git submodule foreach git diff && exit 1)
+          git diff --exit-code
       - name: Cleanup the Nix store
         run: |
           nix-env --delete-generations old
