--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -32,9 +32,10 @@ jobs:
           cd src/bindings
           git diff --exit-code
       - name: add build to gc-root if on main
-        if: github.ref == 'refs/heads/main'
+        # enabeling on this branch for 1 commit to test it
+        #if: github.ref == 'refs/heads/main'
         run: |
-          nix build o1js#o1js-bindings --out-link /var/o1js-bindings-gcroot
+          nix build o1js#o1js-bindings --out-link /home/app/actions-runner/nix-cache/main-bindings-gcroot
       - name: Cleanup the Nix store
         run: |
           nix-store --gc --print-dead
