--- a/package.json
+++ b/package.json
@@ -79,9 +79,11 @@
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^27.0.0",
     "@types/node": "^18.14.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "esbuild": "^0.19.2",
     "eslint": "^8.0.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
     "expect": "^29.0.1",
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
