--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -48,9 +48,9 @@ jobs:
         run: |
           cd src/bindings
           git add .
-          git diff HEAD > bindings.patch
+          git diff HEAD > ../../bindings.patch
       - name: Upload patch
         uses: actions/upload-artifact@v4
         with:
           name: bindings.patch
-          path: src/bindings/bindings.patch
+          path: bindings.patch
