--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           cd src/bindings
           git add .
-          git diff HEAD > ../../bindings.patch
+          git diff HEAD --textconv --text > ../../bindings.patch
       - name: Upload patch
         uses: actions/upload-artifact@v4
         with:
