--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -40,8 +40,7 @@ jobs:
       - uses: parkerbxyz/suggest-changes@v1
         with:
           comment: 'please update the npm-deps-hash'
-          event: 'comment'
-
+          event: 'REQUEST_CHANGES'
 
   nix-build:
     name: build-bindings-ubuntu
