turn off more lint rules and create workflow

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,8 +1,13 @@
 {
     "extends": "oxlint/recommended",
     "rules": {
+        "erasing-op": "off",
         "no-new-array": "off",
-        "no-unsafe-finally": "off"
+        "no-this-alias": "off",
+        "no-unsafe-finally": "off",
+        "no-unused-labels": "off",
+        "no-useless-escape": "off",
+        "no-wrapper-object-types": "off"
     },
     "ignorePatterns": [
         "_build/",
