testing with lintable file

--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "prepublish:node": "node src/build/copy-artifacts.js && rimraf ./dist/node && npx tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
     "prepublishOnly": "npm run prepublish:web && npm run prepublish:node",
     "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
-    "format": "prettier --write --ignore-unknown **/*",
-    "format:check": "prettier --check --ignore-unknown **/*",
-    "format:husky": "prettier --write --ignore-unknown",
+    "format": "prettier --write --ignore-unknown",
+    "format:check": "prettier --check --ignore-unknown",
     "clean": "rimraf ./dist && rimraf ./src/bindings/compiled/_node_bindings",
     "clean-all": "npm run clean && rimraf ./tests/report && rimraf ./tests/test-artifacts",
     "lint": "npx oxlint",
     "lint:fix": "npx oxlint --fix --fix-suggestions",
+    "lint:strict": "npx oxlint --max-warnings 0",
     "test": "./run-jest-tests.sh",
     "test:integration": "./run-integration-tests.sh",
     "test:unit": "./run-unit-tests.sh",
