--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,8 +24,26 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Get Changed Files (Compare with Main)
+        id: get_changed_files
+        run: |
+          git fetch origin main --depth=1
+          CHANGED_FILES=$(git diff --name-only origin/main | grep -E '\.(ts|js)$' || true)
+          
+          if [ -n "$CHANGED_FILES" ]; then
+            echo "Files changed:"
+            echo "$CHANGED_FILES"
+            echo "$CHANGED_FILES" > changed_files.txt
+            echo "files_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "No relevant files changed."
+            echo "files_changed=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Run Prettier Check
-        run: git diff --name-only | grep -E '\.(ts|js)$' | xargs npm run format:check
+        if: steps.get_changed_files.outputs.files_changed == 'true'
+        run: xargs npm run format:check < changed_files.txt
 
       - name: Run Oxlint
-        run: git diff --name-only | grep -E '\.(ts|js)$' | xargs npm run lint
+        if: steps.get_changed_files.outputs.files_changed == 'true'
+        run: xargs npm run lint:strict < changed_files.txt
