--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
     "@noble/hashes": "^1.3.2",
+    "@noble/curves": "1.8.1",
     "@playwright/test": "^1.48.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^27.0.0",
