--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "typedoc": "^0.27",
     "typedoc-plugin-markdown": "^4.4",
     "typedoc-plugin-merge-modules": "^6.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/libsodium-wrappers-sumo": "^0.7.8"
   },
   "dependencies": {
     "blakejs": "1.2.1",
@@ -111,6 +112,8 @@
     "isomorphic-fetch": "^3.0.0",
     "js-sha256": "^0.9.0",
     "reflect-metadata": "^0.1.13",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "libsodium-wrappers-sumo": "^0.7.15",
+    "stacktrace-js": "^2.0.2"
   }
 }
