--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "expect": "^29.0.1",
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
+    "graphql": "^16.10.0",
     "howslow": "^0.1.0",
     "husky": "^9.1.7",
     "jest": "^28.1.3",
