--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "@playwright/test": "^1.48.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/jest": "^27.0.0",
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^18.14.2",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.19.12",
     "expect": "^29.0.1",
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
@@ -104,17 +105,16 @@
     "typedoc": "^0.27",
     "typedoc-plugin-markdown": "^4.4",
     "typedoc-plugin-merge-modules": "^6.1",
-    "typescript": "^5.4.5",
-    "@types/libsodium-wrappers-sumo": "^0.7.8"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
     "isomorphic-fetch": "^3.0.0",
     "js-sha256": "^0.9.0",
-    "reflect-metadata": "^0.1.13",
-    "tslib": "^2.3.0",
     "libsodium-wrappers-sumo": "^0.7.15",
-    "stacktrace-js": "^2.0.2"
+    "reflect-metadata": "^0.1.13",
+    "stacktrace-js": "^2.0.2",
+    "tslib": "^2.3.0"
   }
 }
