--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ src/config.mlh
 .direnv
 .rustup
 result
+# precompiled bindings
+src/bindings/compiled
+# allows dune and README.md
+src/bindings/mina-transaction/gen/*.js
+src/bindings/mina-transaction/gen/*.ts
