--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -2,7 +2,7 @@
 # community can change them without being scared of breaking things, or
 # needing to do the complicated (without nix) build setup.
 
-name: Build o1js bindings
+name: Build precompiled bindings
 
 on:
   pull_request:
@@ -12,37 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-npm-deps:
-    name: check-npm-deps
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
-    steps:
-      - name: Set up Nix
-        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
-      - name: Disable smudging
-        run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Try to build
-        run: |
-          set -Eeu
-          ./pin.sh
-          nix build o1js#npm-deps
-  update-npm-deps:
-    needs: check-npm-deps
-    if: ${{ failure() }}
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
-    steps:
-      - name: Set up Nix
-        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
-      - name: update-hash
-        run: nix run o1js#update-npm-deps
-      - uses: parkerbxyz/suggest-changes@v1
-        with:
-          comment: 'please update the npm-deps-hash'
-          event: 'REQUEST_CHANGES'
-
-  nix-build:
+  nix-builds:
     name: build-bindings-ubuntu
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
@@ -53,36 +23,25 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build the o1js bindings
+      - name: fix npmDepsHash
         run: |
           set -Eeu
           ./pin.sh
-          nix run o1js#update-bindings --max-jobs 4
-          #fail if this changes any files
-          cd src/bindings
-          echo If this check fails you can download a patch from the patch-upload job
-          echo "https://github.com/o1-labs/o1js/blob/main/README-dev.md#bindings-check-in-ci"
-          git diff --exit-code
+          nix run o1js#update-npm-deps
+          #TODO when there is a diff suggest the change but don't fail
+      - name: Build the o1js bindings
+        id: bindings-build
+        run: |
+          nix run o1js#generate-bindings --max-jobs 4
+      - name: generate tar
+        run: |
+          nix build o1js#bindings-tar --out-link bindings.tar.gz
+      - name: Upload bindings
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.ref }}-bindings.tar.gz
+          path: bindings.tar.gz
       - name: add build to gc-root if on main
         if: github.ref == 'refs/heads/main'
         run: |
           nix build o1js#o1js-bindings --out-link /home/app/actions-runner/nix-cache/main-bindings-gcroot
-      - name: Cleanup the Nix store
-        run: |
-          nix-store --gc --print-dead
-          nix-store --optimise
-  patch-upload:
-    needs: nix-build
-    if: ${{ failure() }}
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
-    steps:
-      - name: generate patch
-        run: |
-          cd src/bindings
-          git add .
-          git diff HEAD --textconv --text > ../../bindings.patch
-      - name: Upload patch
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings.patch
-          path: bindings.patch
