--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -17,6 +17,39 @@ permissions:
   contents: write
 
 jobs:
+  precompiled-bindings:
+    name: build-bindings
+    runs-on: [sdk-self-hosted-linux-amd64-build-system]
+    steps:
+      - name: Set up Nix
+        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
+      - name: Disable smudging
+        run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: fix npmDepsHash
+        run: |
+          set -Eeu
+          ./pin.sh
+          nix run o1js#update-npm-deps
+          #TODO when there is a diff suggest the change but don't fail
+      - name: Build the o1js bindings
+        id: bindings-build
+        run: |
+          nix run o1js#generate-bindings --max-jobs 4
+      - name: generate tar
+        run: |
+          nix build o1js#bindings-tar --out-link bindings.tar.gz
+      - name: Upload bindings
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.ref }}-bindings.tar.gz
+          path: bindings.tar.gz
+      - name: add build to gc-root if on main
+        if: github.ref == 'refs/heads/main'
+        run: |
+          nix build o1js#o1js-bindings --out-link /home/app/actions-runner/nix-cache/main-bindings-gcroot
   Prepare:
     runs-on: ubuntu-latest
     outputs:
