--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -369,3 +369,37 @@ jobs:
           strategy: upgrade
         env:
           INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+
+  Release-o1js-testing-on-NPM:
+    if: github.ref == 'refs/heads/main'
+    timeout-minutes: 180
+    runs-on: ubuntu-latest
+    needs: [Build-And-Test-Server, Run-Unit-Tests, Build-And-Test-Web]
+    steps:
+      - name: Restore repository
+        uses: actions/cache@v4
+        with:
+          path: .
+          key: repo-${{ github.sha }}
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Build @o1js/testing
+        run: |
+          npm ci
+          cd src/testing
+          npm ci
+          npm run prepublishOnly
+
+      - name: Publish to NPM if version has changed
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: './src/testing/package.json'
+          strategy: upgrade
+        env:
+          INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
