--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -7,8 +7,6 @@ on:
       - 'main'
       - 'v*'
 
-
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -32,6 +30,14 @@ jobs:
         volumes:
           - /tmp:/root/logs
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings.tar.gz
+          path: bindings.tar.gz
+      - name: untar artifact
+        run: |
+          tar xvf bindings.tar.gz src/bindings
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Use shared steps for live testing jobs
@@ -56,6 +62,14 @@ jobs:
         volumes:
           - /tmp:/root/logs
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: bindings.tar.gz
+          path: bindings.tar.gz
+      - name: untar artifact
+        run: |
+          tar xvf bindings.tar.gz src/bindings
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Use shared steps for live testing jobs
