--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -30,16 +30,15 @@ jobs:
         volumes:
           - /tmp:/root/logs
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: bindings.tar.gz
-          path: bindings.tar.gz
-      - name: untar artifact
-        run: |
-          tar xvf bindings.tar.gz src/bindings
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Restore bindings-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/bindings/compiled
+            src/bindings/mina-transaction/gen
+          key: bindings-${{ github.run_id }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
@@ -62,16 +61,15 @@ jobs:
         volumes:
           - /tmp:/root/logs
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: bindings.tar.gz
-          path: bindings.tar.gz
-      - name: untar artifact
-        run: |
-          tar xvf bindings.tar.gz src/bindings
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Restore bindings-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            src/bindings/compiled
+            src/bindings/mina-transaction/gen
+          key: bindings-${{ github.run_id }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
