use action-wait-for-check

--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -1,11 +1,16 @@
 name: Test o1js against lightnet
 on:
-  workflow_run:
-    workflows: ['Build oi1js']
-    types: [completed]
+  push:
     branches:
-      - 'main'
-      - 'v*'
+      - main
+      - v3
+      - v1
+  pull_request:
+    branches:
+      - main
+      - v3
+      - v1
+  workflow_dispatch: {}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -32,13 +37,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Restore bindings-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            src/bindings/compiled
-            src/bindings/mina-transaction/gen
-          key: bindings-${{ github.run_id }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
@@ -63,13 +61,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Restore bindings-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            src/bindings/compiled
-            src/bindings/mina-transaction/gen
-          key: bindings-${{ github.run_id }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
