--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -30,6 +30,11 @@ jobs:
           ./pin.sh
           nix run o1js#update-npm-deps
           #TODO when there is a diff suggest the change but don't fail
+      - uses: Geometer1729/suggest-changes@v1
+        with:
+          comment: 'please commit the npmDepsHash change'
+          event: 'REQUEST_CHANGES'
+          allow_new_files: 'true'
       - name: Build the o1js bindings
         run: |
           nix run o1js#generate-bindings --max-jobs 4
