--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           checkName: "build-bindings"
           ref: ${{ github.sha }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Restore bindings-cache
         uses: actions/cache@v4
         with:
